# toggl_linux_rs

./: .gitignore  Cargo.toml  README.md  config.example.toml
src/: analysis.rs  analyzer.rs  calendar.rs  config.rs  data_collector.rs  event.rs  lib.rs  main.rs  toggl.rs  utils.rs  wizard.rs
